# ASC_EX

./: test.cpp
.cache/clangd/index/: matmul.cpp.9E4519EF33714D25.idx
Task3/: version3.cpp
Task3/output/: version1.cpp  version2.cpp
task1/: c.asm
task2/: .gdbinit  ans1.txt  bomb.asm  bomb.md
task3/: version4.cpp
task3/output/: version4  version5
task4/: Cosumer.cpp
task5/: 1.cpp  CMakeLists.txt  makefile  matmul.cpp
task5/matmul_omp/: CMakeLists.txt  matmul_omp.cpp
task5/matmul_omp/.cache/clangd/index/: matmul_omp.cpp.CAFCDC1F4FF476DD.idx
task5/matmul_thread/: CMakeLists.txt  matmul_thread.cpp
task5/matmul_thread/.cache/clangd/index/: matmul_omp.cpp.A6A4CC31A71EA161.idx  matmul_thread.cpp.C38A2E919712AEFD.idx
task5/matmul_thread_opm/: CMakeLists.txt  matmul_thread_omp.cpp
task5/matmul_thread_opm/.cache/clangd/index/: matmul_omp.cpp.BDAFA9BAEA8E6FAE.idx
task6/.cache/clangd/index/: CV2.cpp.2C31075A32099AAA.idx  CV2.h.3F18686445867CA6.idx  main.cpp.A535F70B35CC87C2.idx
task6/CV_omp/: CMakeLists.txt
task6/CV_omp/include/: CV2.h
task6/CV_omp/src/: CMakeLists.txt  CV2_omp.cpp
task6/CV_thread1/.cache/clangd/index/: CV2.h.1510060345CF2B59.idx  CV2.h.5B5EA167377B8378.idx  CV2_thread.cpp.1F57393FF42D4A86.idx  CV2_thread.cpp.8307866B2A135CC2.idx  main.cpp.C81B5D4F0624810F.idx  main.cpp.D16863CCF9F19F05.idx
task6/CV_thread1/include/: CV2.h
task6/CV_thread1/src/: CV2_thread.cpp  main.cpp
